*
* 1.1.4
*

- Fixed some problems with database export/import
- Fixed issues: #328


*
* 1.1.3
*

- Added SMS driver for Portech MV-37x VoIP GSM gateways
- Fixed serious memory leaks in server
- Fixed compilation problems on some Linux distributions
- Multiple fixes and minor improvements in server and management console


*
* 1.1.2
*

- Added VLAN view in management console
- OpenStreetMap support improved; added local cache for map images
- Added option to use alternative tile server for geographic maps
- Geographic maps now can be used as background for network maps
- Implemented hierarchical maps
- New MIBs added: POLYCOM-RMX-MIB
- Multiple fixes and minor improvements in management console


*
* 1.1.1
*

- Network device drivers introduced
- Added drivers for Avaya ERS switches
- Added driver for Cisco Catalyst 2900XL, 2950, and 3500XL series switches
- New threshold function: SUM
- New NXSL functions: SetCustomAttribute
- Added support for zoning (dividing network into independent parts with
  possibly overlapped address ranges)
- OpenStreetMap integration for geolocation display
- New MIBs added: CISCO-CLUSTER-MIB, CISCO-HSRP-EXT-MIB, CISCO-HSRP-MIB,
  CISCO-MAC-NOTIFICATION-MIB, CISCO-STACKMAKER-MIB, CISCO-STP-EXTENSIONS-MIB,
  CISCO-SWITCH-CGMP-MIB, CISCO-VLAN-MEMBERSHIP-MIB, EMBEDDED-NGX-MIB
- nxpush now supports node identification by DNS name or IP address
- Configurable dashboards introduced


*
* 1.1.0
*

- Server jobs introduced
- Java API added
- Portable (Eclipse-based) management console introduced
- Server switched to UNICODE on Windows platform
- Windows x64 server version added
- MIB compiler improved
- Dropped agent support for Novell NetWare and Windows NT 4.0, 95, 98, Me


*
* 1.0.10
*

- Network discovery improved
- Added VRRP support
- Added new object tools type: server command
- New MIBs added: VRRP-MIB
- Fixed issues: #320, #321, #322


*
* 1.0.9
*

- Added LLDP support
- MIB compiler improved
- SNMP tools improved